--- a/src/ui/contacts.form
+++ b/src/ui/contacts.form
@@ -468,14 +468,14 @@
                               <text value="修改密码"/>
                             </properties>
                           </component>
-                          <component id="92e8c" class="javax.swing.JButton" binding="createUserBtn">
+                          <component id="92e8c" class="javax.swing.JButton" binding="userSettingsBtn">
                             <constraints>
                               <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
                               <gridbag weightx="1.0" weighty="1.0"/>
                             </constraints>
                             <properties>
                               <horizontalTextPosition value="0"/>
-                              <text value="创建用戶"/>
+                              <text value="用户设置"/>
                             </properties>
                             <clientProperties>
                               <hideActionText class="java.lang.Boolean" value="false"/>
@@ -496,7 +496,7 @@
                               <gridbag weightx="0.0" weighty="0.0"/>
                             </constraints>
                             <properties>
-                              <text value="Label"/>
+                              <text value=""/>
                             </properties>
                           </component>
                         </children>
